welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:30: error: too many arguments for method faireBigMotif: ()Unit
	faireBigMotif(c: Color.YELLOW)
                     ^