welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
def faireV() {
avance()
baisseBrosse()
leveBrosse()
avance(); gauche(); avance()
baisseBrosse()
leveBrosse()
droite(); avance(); droite(); avance()
baisseBrosse()
leveBrosse()
gauche()
avance()
gauche()
	
}
def faireMotif() {
	for (k <- 1 to 4) {
	faireV()
}
}
def faireBigMotif() {
for (k2 <-1 to 3) {
	faireMotif()
	avance(); avance(); avance(); avance(); avance() 
}	
}
for (k3 <-1 to 3) {
	faireBigMotif(c: Color.YELLOW)
	gauche(); avance(); avance(); avance(); avance(); avance(); droite()
	
}
}